<resources>
    <string name="app_name">谷歌中国</string>
    <string name="tv_home">首页</string>
    <string name="tv_setting">设置</string>
    <string name="tv_theme">主题</string>
    <string name="tv_scans">安装包管理</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_updates">检查更新</string>
    <string name="tv_about">关于</string>
    <string name="tv_exit">退出</string>
    <string name="open_drawer">侧边栏打开</string>
    <string name="close_drawer">侧边栏关闭</string>
    <string name="action_search">搜索</string>
</resources>
